log_filter 7.x-1.0.x, 2012-12-16
---------------------------
* Project started.